@@ -1,3 +1,8 @@
+2007-02-05  Maxim Kuvyrkov  <mkuvyrkov@ispras.ru>
+
+	PR target/29682
+	* gcc-target/ia64/pr29682.c: New test.
+
 2007-02-04  Richard Guenther  <rguenther@suse.de>
 
 	Backport from mainline:
